<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_15">

        <!-- Login progress -->
        <ScrollView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginEnd="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/sign_up_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/accent_black"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:hintTextColor="@color/colorAccent">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/FontMontSerratRegular" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColorHint="@color/accent_black"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:hintTextColor="@color/colorAccent">

                    <EditText
                        android:id="@+id/middle_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/middle_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/FontMontSerratRegular" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColorHint="@color/accent_black"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:hintTextColor="@color/colorAccent">

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/FontMontSerratRegular" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColorHint="@color/accent_black"
                    app:hintTextAppearance="@style/FontMontSerratRegular"
                    app:hintTextColor="@color/colorAccent">

                    <EditText
                        android:id="@+id/contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/FontMontSerratRegular" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColorHint="@color/accent_black"
                    app:hintTextAppearance="@style/FontMontSerratRegular"
                    app:hintTextColor="@color/colorAccent">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/FontMontSerratRegular" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColorHint="@color/accent_black"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:hintTextColor="@color/colorAccent">

                    <EditText
                        android:id="@+id/which_class"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/which_class"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/FontMontSerratRegular" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColorHint="@color/accent_black"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:hintTextColor="@color/colorAccent">

                    <EditText
                        android:id="@+id/stream"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/stream"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/FontMontSerratRegular" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColorHint="@color/accent_black"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:hintTextColor="@color/colorAccent">

                    <EditText
                        android:id="@+id/division"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/division"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/FontMontSerratRegular" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColorHint="@color/accent_black"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:hintTextColor="@color/colorAccent">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/FontMontSerratRegular" />

                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:id="@+id/btn_create_pack"
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/dp_10"
                    android:background="@drawable/rectangle_corner"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        style="@style/ButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:clickable="false"
                        android:drawablePadding="@dimen/dp_8"
                        android:focusable="false"
                        android:text="@string/user_registration" />
                </FrameLayout>

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/accent_white"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:titleTextColor="@color/accent_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/user_registration"
                android:textAppearance="@style/FontMontSerratSemiBold"
                android:textSize="@dimen/sp_18" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>